--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,9 +38,9 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.24'
+        go-version: '1.21'
 
     - name: Build binary
       env:
@@ -50,7 +50,7 @@ jobs:
         go build -ldflags="-s -w" -o ${{ matrix.name }} main.go
         
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.name }}
         path: ${{ matrix.name }}
@@ -64,14 +64,15 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Download all artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
-        path: ./releases/
+        path: ./artifacts/
         
-    - name: Flatten artifacts
+    - name: Prepare release files
       run: |
         mkdir -p dist
-        find ./releases/ -name "please-*" -type f -exec cp {} ./dist/ \;
+        # Copy all artifacts to dist directory
+        find ./artifacts/ -name "please-*" -type f -exec cp {} ./dist/ \;
         ls -la ./dist/
         
     - name: Generate release tag
@@ -79,18 +80,17 @@ jobs:
       run: |
         if [[ $GITHUB_REF == refs/tags/* ]]; then
           echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+          echo "prerelease=false" >> $GITHUB_OUTPUT
         else
           echo "tag=latest-$(date +'%Y%m%d-%H%M%S')" >> $GITHUB_OUTPUT
+          echo "prerelease=true" >> $GITHUB_OUTPUT
         fi
         
     - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ steps.tag.outputs.tag }}
-        release_name: Please ${{ steps.tag.outputs.tag }}
+        name: Please ${{ steps.tag.outputs.tag }}
         body: |
           🤖 **Please - Your Overly Helpful Digital Assistant**
           
@@ -135,54 +135,11 @@ jobs:
           
           Built automatically from commit: ${{ github.sha }}
         draft: false
-        prerelease: ${{ !startsWith(github.ref, 'refs/tags/v') }}
-
-    - name: Upload Windows Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/please-windows-amd64.exe
-        asset_name: please-windows-amd64.exe
-        asset_content_type: application/octet-stream
-
-    - name: Upload Linux AMD64 Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/please-linux-amd64
-        asset_name: please-linux-amd64
-        asset_content_type: application/octet-stream
-
-    - name: Upload Linux ARM64 Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/please-linux-arm64
-        asset_name: please-linux-arm64
-        asset_content_type: application/octet-stream
-
-    - name: Upload macOS AMD64 Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/please-macos-amd64
-        asset_name: please-macos-amd64
-        asset_content_type: application/octet-stream
-
-    - name: Upload macOS ARM64 Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/please-macos-arm64
-        asset_name: please-macos-arm64
-        asset_content_type: application/octet-stream
+        prerelease: ${{ steps.tag.outputs.prerelease }}
+        files: |
+          dist/please-windows-amd64.exe
+          dist/please-linux-amd64
+          dist/please-linux-arm64
+          dist/please-macos-amd64
+          dist/please-macos-arm64
+        token: ${{ secrets.GITHUB_TOKEN }}
