--- a/tests/Domain.UnitTests/Please.Domain.UnitTests/Please.Domain.UnitTests.csproj
+++ b/tests/Domain.UnitTests/Please.Domain.UnitTests/Please.Domain.UnitTests.csproj
@@ -21,4 +21,8 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Domain\Please.Domain\Please.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
