--- a/tests/Application.IntegrationTests/Please.Application.IntegrationTests/Please.Application.IntegrationTests.csproj
+++ b/tests/Application.IntegrationTests/Please.Application.IntegrationTests/Please.Application.IntegrationTests.csproj
@@ -1,10 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
@@ -21,4 +19,9 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../../../src/Application/Please.Application/Please.Application.csproj" />
+    <ProjectReference Include="../../../src/Domain/Please.Domain/Please.Domain.csproj" />
+    <ProjectReference Include="../../TestUtilities/Please.TestUtilities/Please.TestUtilities.csproj" />
+  </ItemGroup>
 </Project>
